Added WatchLater and Home-Page

--- a/src/components/NavForTab/NavForTab.css
+++ b/src/components/NavForTab/NavForTab.css
@@ -4,8 +4,8 @@
   margin-bottom: 1rem;
   width: 100%;
   max-width: 30rem;
-  background-color: var(--black-color);
-  border: 2px solid var(--black-color);
+  background-color: black;
+  border: 2px solid black;
   border-radius: 4rem;
   position: fixed;
   bottom: 0;
@@ -23,12 +23,11 @@
   cursor: pointer;
 }
 .nav-bar-tab-list {
-  color: var(--white-color);
+  color: var(--primary-theme-color);
   padding: 12px 16px;
   display: block;
   cursor: pointer;
 }
-
 
 @media screen and (max-width: 800px) {
   .nav-bar-tab {
