--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,24 @@ a {
   text-decoration: none;
   display: flex;
 }
-:root {
+[theme="light"] {
   --primary-color: #ff8c44;
   --primary-bg-color: #151515;
   --secondary-bg-color: rgb(34, 31, 31);
-  --white-color: white;
-  --black-color: black;
+  --primary-theme-color: white;
+  --secondary-theme-color: black;
+  --font-size-XX-large: clamp(3rem, 12vw, 10rem);
+  --font-size-X-large: clamp(1.2rem, 2.5vw, 10rem);
+  --font-size-large: clamp(1rem, 1.5vw, 10rem);
+  --font-size-regular: clamp(12px, 2.5vw, 1rem);
+  --font-size-small: clamp(8px, 1vw, 1rem);
+}
+[theme="dark"] {
+  --primary-color: #ff8c44;
+  --primary-bg-color: #ffffff;
+  --secondary-bg-color: #fefbfb;
+  --primary-theme-color: black;
+  --secondary-theme-color: white;
   --font-size-XX-large: clamp(3rem, 12vw, 10rem);
   --font-size-X-large: clamp(1.2rem, 2.5vw, 10rem);
   --font-size-large: clamp(1rem, 1.5vw, 10rem);
@@ -33,6 +45,7 @@ a {
 /*** Scroll bar ***/
 
 ::-webkit-scrollbar {
+  display: none;
   width: 5px;
   height: 5px;
 }
@@ -47,22 +60,3 @@ a {
   scrollbar-width: thin;
   scrollbar-color: var(--primary-color) transparent;
 }
-/* :root {
-  primary-color :- #ff8c44
-  Text-Color:- #49a0eb
-  black-Theme :- #1A202C
-  white-Theme :- #FFFFFF 
-} */
-
-/* :root {
-  --primary-color: #3282b8;
-  --primary-bg-color: #151515;
-  --secondary-bg-color: rgb(27, 25, 25);
-  --white-color: white;
-  --black-color: black;
-  --font-size-XX-large: clamp(3rem, 12vw, 10rem);
-  --font-size-X-large: clamp(1.2rem, 2.5vw, 10rem);
-  --font-size-large: clamp(1rem, 1.5vw, 10rem);
-  --font-size-regular: clamp(12px, 2.5vw, 1rem);
-  --font-size-small: clamp(8px, 1vw, 1rem);
-} */
