--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,6 @@
 /*card*/
 .card {
-  margin: 2rem 3rem 10rem;
+  margin: 5rem 3rem 10rem;
   gap: 40px;
   display: grid;
   justify-items: center;
@@ -13,7 +13,7 @@
   flex-direction: column;
   border-radius: 0.5rem;
   position: relative;
-  box-shadow: 0px 0px 5px rgb(167, 167, 167);
+  box-shadow: 0px 0px 5px 1px rgb(167, 167, 167);
 }
 .card--thumbnail {
   position: relative;
@@ -21,14 +21,14 @@
 .card__img--thumbnail {
   cursor: pointer;
   width: 100%;
-  border: 4px solid var(--white-color);
+  border-radius:0.5rem 0.5rem 0rem 0rem;
 }
 .card--content-container {
   display: flex;
   justify-content: center;
   gap: 8px;
   padding: 0.5rem;
-  color: var(--white-color);
+  color: var(--primary-theme-color);
 }
 .card__img--content-Profile {
   width: 2rem;
@@ -51,58 +51,12 @@
 }
 .card--time {
   font-size: 0.8rem;
-  color: var(--white-color);
-  background-color: var(--black-color);
-  border: 2px solid var(--black-color);
+  color: var(--primary-theme-color);
+  background-color: var(--secondary-theme-color);
+  border: 2px solid var(--secondary-theme-color);
   border-radius: 0.5rem;
   padding: 2px 6px;
   position: absolute;
   right: 10px;
   bottom: 10px;
 }
-/* .card__dropdown {
-  position: relative;
-  display: inline-block;
-} */
-
-/* .card__dropdown-box {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  padding: 8px;
-} */
-/* .card__icon--container {
-  position: absolute;
-  top:8px;
-  right: 8px ;
-} */
-/* .card__icon {
-  width: 1.5rem;
-}
-.card__icon:hover .card__dropdown--content {
-  display: block;
-}
-.card__dropdown--content-hide {
-  display: none;
-  z-index: 1;
-  position: absolute;
-  left: -130px;
-  background-color: var(--primary-bg-color);
-  box-shadow: 0px 0px 5px rgb(167, 167, 167);
-  min-width: 8rem;
-}
-.card__dropdown--content-show {
-  display: block;
-  z-index: 1;
-  position: absolute;
-  left: -130px;
-  background-color: var(--primary-bg-color);
-  box-shadow: 0px 0px 5px rgb(167, 167, 167);
-  min-width: 8rem;
-} */
-
-/* Links inside the dropdown */
-/* .card__dropdown--content {
-  color: var(--white-color);
-} */
-/* card Ends Here */
