--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -2,24 +2,26 @@
   position: fixed;
   z-index: 1;
   width: 100%;
+  height: 3.5rem;
   grid-area: header;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 8px;
   background-color: var(--primary-bg-color);
-  border-bottom: 2px solid var(--primary-color);
+  box-shadow: 0px 1.5px 5px rgb(167, 167, 167);
 }
 .nav-bar__img--logo {
   cursor: pointer;
   margin-left: 1rem;
-  max-width: 80%;
+  max-width: 10rem;
 }
 .nav-bar__img--desktop-logo {
   display: block;
 }
 .nav-bar__img--mobile-logo {
   display: none;
+  width: 3rem;
 }
 .nav-bar__list {
   display: flex;
