--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -9,11 +9,11 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  border-right: 3px solid var(--primary-color);
+  box-shadow: 1px 1.5px 5px rgb(167, 167, 167);
   background-color: var(--primary-bg-color);
   padding: 0 0.5rem;
 }
-.sidebar__unordered-list {
+.sidebar__list--container {
   margin-top: 1rem;
 }
 .sidebar__list {
@@ -22,17 +22,19 @@
   justify-content: flex-start;
   align-items: center;
   padding: 0.5rem 1rem;
-  margin: 1rem 0rem;
+  margin: 0.5rem 0rem;
 }
 .sidebar__icon {
   max-width: 1.5rem;
   margin: 0rem 1rem;
 }
 .sidebar--content {
-  color: var(--white-color);
+  color: var(--primary-theme-color);
   font-size: var(--font-size-medium);
   margin-left: 1rem;
 }
+.active,
 .sidebar__list:hover {
-  background-color: var(--secondary-bg-color);
+  border-radius: 4px;
+  background-color: var(--primary-color);
 }
