Added Single and Liked Page

--- a/src/Pages/Home-Page/Home-Responsive.css
+++ b/src/Pages/Home-Page/Home-Responsive.css
@@ -4,13 +4,13 @@
   }
 }
 @media screen and (max-width: 800px) {
-  .home-page {
+  .page--Container {
     grid-template-columns: 100%;
     grid-template-areas:
       "header header header"
       "main main main";
   }
-  .home-page__main-container {
+  .main--container {
     grid-area: main;
   }
   .nav-bar__img--logo {
