--- a/src/Pages/Home-Page/Home.css
+++ b/src/Pages/Home-Page/Home.css
@@ -1,4 +1,4 @@
-.home-page {
+.page--Container {
   font-family: "Montserrat", sans-serif;
   display: grid;
   height: 100%;
@@ -9,7 +9,7 @@
     "sidebar main main";
 }
 
-.home-page__main-container {
+.main--container {
   grid-area: main;
   min-height: calc(100vh - 3.5rem);
   background-color: var(--secondary-bg-color);
