--- a/src/Pages/Video-Page/Components/VideoCard.css
+++ b/src/Pages/Video-Page/Components/VideoCard.css
@@ -58,6 +58,10 @@
   align-items: center;
   gap: 15px;
 }
+.videoCard__icon{
+  display: flex;
+  gap: 10px;
+}
 .video-container {
   padding-top: 56.25%;
   position: relative;
