--- a/src/Pages/Video-Page/Video.css
+++ b/src/Pages/Video-Page/Video.css
@@ -23,7 +23,7 @@
     display: none;
   }
   .Video-page__aside-bottom-container {
-    margin: 0.3rem 0rem 5rem;
+    margin: 0.3rem;
     gap: 8px;
     display: grid;
     justify-items: center;
