--- a/src/Pages/History-page/Components/Header.css
+++ b/src/Pages/History-page/Components/Header.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 4px 0 0 4px;
+  margin: 0.2rem 0 0 0.2rem;
   min-height: 3.5rem;
   width: 100%;
   background-color: var(--secondary-bg-color);
