--- a/src/Pages/SignUp-Page/signUp.css
+++ b/src/Pages/SignUp-Page/signUp.css
@@ -4,7 +4,7 @@
   justify-content: center;
 }
 .signup {
-  margin: 0 0.5rem 1rem;
+  margin: 3rem 0.5rem 7rem;
   flex-basis: 25rem;
 }
 .signup--header {
