--- a/src/components/AsideCard/AsideCard.css
+++ b/src/components/AsideCard/AsideCard.css
@@ -1,7 +1,7 @@
 /***** aside *****/
 .aside-card--wrapper {
   margin: 1rem;
-  max-width: 25rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
