--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,19 +1,20 @@
 /*card*/
 .card {
-  margin: 5rem 3rem 10rem;
+  margin: 5rem 0.5rem 10rem;
   gap: 40px;
   display: grid;
-  justify-items: center;
+  justify-items:center;
   grid-template-rows: auto;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
 }
 .card--wrapper {
-  max-width: 25rem;
+  max-width: 30rem;
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
   position: relative;
   box-shadow: 0px 0px 5px 1px rgb(167, 167, 167);
+  width: 100%
 }
 .card--thumbnail {
   position: relative;
@@ -25,7 +26,6 @@
 }
 .card--content-container {
   display: flex;
-  justify-content: center;
   gap: 8px;
   padding: 0.5rem;
   color: var(--primary-theme-color);
@@ -59,4 +59,9 @@
   position: absolute;
   right: 10px;
   bottom: 10px;
+}
+.card--empty{
+  margin-top: 10rem;
+  font-size: var(--font-size-X-large);
+  color: var(--primary-theme-color);
 }
