--- a/src/components/AsideCard/AsideCard.css
+++ b/src/components/AsideCard/AsideCard.css
@@ -1,6 +1,6 @@
 /***** aside *****/
 .aside-card--wrapper {
-  margin: 1rem;
+  margin: 1rem 0;
   width: 100%;
   display: flex;
   flex-direction: column;
