--- a/src/Pages/Login-Page/login.css
+++ b/src/Pages/Login-Page/login.css
@@ -55,9 +55,9 @@
 }
 .login-form--submit {
   text-align: center;
-  margin: 2rem 0 12px 0;
 }
 .login-form__btn--submit {
+  margin-top: 0.5rem;
   cursor: pointer;
   width: 100%;
   padding: 4px 1rem;
